(Init) Spark fundamental concepts

--- a/notebooks/get-started.ipynb
+++ b/notebooks/get-started.ipynb
@@ -222,19 +222,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: 1: stop-worker.sh: not found\n"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "## 2- Running Spark Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spark Fundamental Concepts\n",
+    "\n",
+    "- **Spark Driver**: Manager, orchestrator and monitoring of spark applications\n",
+    "- **Spark Executor**: Responsible for running spark code"
+   ]
   },
   {
    "cell_type": "code",
